--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 body {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-columns: 1fr 5fr 1fr;
   height: 90vh;
+  font-size: 0.8em;
 }
 
 .main-container {
@@ -9,11 +10,100 @@ body {
   grid-column: 2 / 3;
   grid-row: 1 / 1;
   display: grid;
-  grid-template-rows: 0.5fr 2fr 1fr 1fr;
+  grid-template-rows: 0.5fr 1.5fr 1fr 1fr;
 }
 
 .main-container > div {
 
   border: 1px solid black;
 }
+
+.current-weather {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+}
+
+.current-weather > :first-child {
+  display: grid;
+  grid-template-rows: 2fr 1fr;
+}
+
+.current-weather > :nth-child(2) {
+  display: grid;
+  grid-template-rows: 1fr 1fr 1fr;
+  justify-content: center;
+}
+
+.current-weather > :nth-child(2) > :first-child {
+  justify-self: center;
+}
+
+.current-weather > :nth-child(2) > :nth-child(n+2) {
+  display: flex;
+  justify-content: space-between;
+}
+
+.current-weather > :nth-child(2) > :nth-child(n+2) > :nth-child(2) {
+  padding-right: 5%;
+}
+
+.current-weather > :nth-child(2) > div > div > :first-child {
+  font-size: 0.8em;
+}
+
+.hourly-forecast {
+  display: flex;
+  overflow-x: auto;
+}
+
+.hourly-div {
+  width: 70px;
+  border: 1px solid black;
+  flex: 0 0 auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.hourly-div > div {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  margin-bottom: -15%;
+}
+
+.hourly-div > div > img {
+  width: 50%;
+  height: 45%;
+}
+
+.hourly-div > div > p {
+  margin: 0;
+  padding-top: 1%;
+}
+
+.daily-forecast {
+  display: flex;
+}
+
+.daily-div {
+  display: grid;
+  grid-template-rows: 1fr 2fr 2fr;
+}
+
+.daily-div * {
+  justify-self: center;
+}
+
+.daily-div > div, .daily-div * div {
+  display: flex;
+}
+
+.daily-div > div * img {
+  height: 20px;
+  width: 20px;
+}
+
+
+
 
