need more styling

--- a/src/style.css
+++ b/src/style.css
@@ -2,14 +2,14 @@ body {
   display: grid;
   grid-template-columns: 1fr 3fr 1fr;
   height: 90vh;
-  font-size: 0.8em;
+  font-size: 1.4em;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+
 
 @media (max-width: 480px) {
   body {
-    display: grid;
     grid-template-columns: 1fr;
-    height: 90vh;
     font-size: 1.0em;
   }
 }
@@ -20,45 +20,141 @@ body {
   grid-column: 2 / 3;
   grid-row: 1 / 1;
   display: grid;
-  grid-template-rows: 0.5fr 1.5fr 1fr 1fr;
+  grid-template-rows: 0.25fr 1.25fr 1fr 1fr;
+  background-color: #959ead;
 }
 
-.main-container > div {
 
+
+.outer-search {
+  display: flex;
+  flex-direction: column;
+}
+
+.inner-search {
+  display: flex;
+  justify-content: center;
+  gap: 3%;
+  height: 100%;
+}
+
+.inner-search > p {
+  align-self: center;
+  font-size: 1.1em;
+  font-weight: bold;
+  margin: 0;
+}
+
+.inner-search > input {
+  align-self: center;
+  border-radius: 25px;
+}
+
+.inner-search > button {
+  align-self: center;
+  border-radius: 10px;
+}
+
+.search-results:empty {
+  list-style: none;
+  border: none;
+  max-width: 250px;
+  align-self: center;
+  margin: 0;
+  display: none;
+}
+
+.search-results {
+  list-style: none;
+  max-width: 250px;
+  align-self: center;
+  margin: 0;
+  margin-left: 10%;
+  padding: 0;
+}
+
+.search-results > li {
   border: 1px solid black;
 }
+
+.search-results > li:hover {
+  background-color: lightblue;
+}
+
 
 .current-weather {
   display: grid;
   grid-template-columns: 1fr 2fr;
+  padding: 2% 0 2% 2%;
 }
 
-.current-weather > :first-child {
-  display: grid;
-  grid-template-rows: 2fr 1fr;
+.current-left-top {
+  padding-right: 10px;
 }
 
-.current-weather > :nth-child(2) {
+.current-left-bottom {
+  display: flex;
+  flex-direction: column;
+}
+
+.current-left-bottom > img {
+  align-self: center;
+  width: 100%;
+}
+
+.current-left-bottom > p {
+  align-self: center;
+  font-weight: bold;
+}
+
+.current-left {
   display: grid;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 0.5fr 1.5fr;
+  gap: 2%;
+}
+
+.current-left > div, .current-right > div > div {
+  border: 1px solid black;
+  border-radius: 15px;
+  background-color: #c1cad9;
+}
+
+.current-right{
+  display: grid;
+  grid-template-rows: 0.5fr 1fr 1fr;
   justify-content: center;
+  gap: 2%;
 }
 
-.current-weather > :nth-child(2) > :first-child {
+.current-right-top {
   justify-self: center;
 }
 
-.current-weather > :nth-child(2) > :nth-child(n+2) {
+.current-right-middle, .current-right-bottom {
   display: flex;
   justify-content: space-between;
 }
 
-.current-weather > :nth-child(2) > :nth-child(n+2) > :nth-child(2) {
+.current-right > :nth-child(n+2) > :nth-child(2) {
   padding-right: 5%;
 }
 
-.current-weather > :nth-child(2) > div > div > :first-child {
+.current-right > div > div > :first-child {
   font-size: 0.8em;
+}
+
+.current-left-top > P {
+  padding-left: 5%;
+}
+
+.current-left-top > :first-child {
+  font-size: 1.3em;
+  margin-bottom: 0;
+}
+
+.current-left-top > :nth-child(2) {
+  margin-top: 2%;
+  padding-left: 7%;
 }
 
 .hourly-forecast {
