--- a/src/style.css
+++ b/src/style.css
@@ -20,15 +20,16 @@ body {
   grid-column: 2 / 3;
   grid-row: 1 / 1;
   display: grid;
-  grid-template-rows: 0.25fr 1.25fr 1fr 1fr;
   background-color: #959ead;
 }
-
-
 
 .outer-search {
   display: flex;
   flex-direction: column;
+  border-bottom: black 1px solid;
+  min-height: 40px;
+  overflow: visible;
+  position: relative;
 }
 
 .inner-search {
@@ -71,6 +72,8 @@ body {
   margin: 0;
   margin-left: 10%;
   padding: 0;
+  z-index: 100;
+  background-color: lightgray;
 }
 
 .search-results > li {
@@ -85,16 +88,15 @@ body {
 .current-weather {
   display: grid;
   grid-template-columns: 1fr 2fr;
-  padding: 2% 0 2% 2%;
+  padding: 1% 1% 1% 1%;
+  gap: 3%;
 }
 
-.current-left-top {
-  padding-right: 10px;
-}
 
 .current-left-bottom {
-  display: flex;
-  flex-direction: column;
+  width: 100%;
+  display: grid;
+  justify-self: center;
 }
 
 .current-left-bottom > img {
@@ -105,13 +107,17 @@ body {
 .current-left-bottom > p {
   align-self: center;
   font-weight: bold;
+  margin-top: 0;
+  justify-self: center;
 }
 
 .current-left {
   display: grid;
-  grid-template-rows: 0.5fr 1.5fr;
+  grid-template-rows: 0.5fr 1fr;
   gap: 2%;
 }
+
+
 
 .current-left > div, .current-right > div > div {
   border: 1px solid black;
@@ -119,28 +125,59 @@ body {
   background-color: #c1cad9;
 }
 
-.current-right{
+.current-right {
   display: grid;
-  grid-template-rows: 0.5fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   justify-content: center;
   gap: 2%;
 }
 
+.current-right * p {
+  text-align: center;
+}
+
 .current-right-top {
   justify-self: center;
+  width: 50%;
 }
+
+.current-right-top > div {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+
 
 .current-right-middle, .current-right-bottom {
   display: flex;
   justify-content: space-between;
+  gap: 2%;
 }
 
-.current-right > :nth-child(n+2) > :nth-child(2) {
-  padding-right: 5%;
+.current-right-middle > div, .current-right-bottom > div {
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
 }
+
+
 
 .current-right > div > div > :first-child {
-  font-size: 0.8em;
+  font-size: 1em;
+}
+
+.current-right > div > div > p {
+  margin: 0;
+  justify-self: center;
+}
+
+.current-left-top {
+  width: 110%;
 }
 
 .current-left-top > P {
@@ -160,16 +197,24 @@ body {
 .hourly-forecast {
   display: flex;
   overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .hourly-div {
-  width: 70px;
+  width: 90px;
   border: 1px solid black;
   flex: 0 0 auto;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
+@media (min-width: 480px) {
+  .hourly-div {
+    min-width: 100px;
+  }
+}
+
 
 .hourly-div > div {
   display: flex;
@@ -181,6 +226,7 @@ body {
 .hourly-div > div > img {
   width: 50%;
   height: 45%;
+  padding-top: 4%;
 }
 
 .hourly-div > div > p {
@@ -197,20 +243,37 @@ body {
 
 .daily-div {
   display: grid;
-  grid-template-rows: 1fr 2fr 2fr;
   border: 1px black solid;
   min-width: 170px;
   justify-items: center;
 }
 
+.daily-div > p {
+  font-size: 1.5em;
+  margin: 7% 0 0 0;
+}
+
+.daily-div > img {
+  width: 80%;
+
+}
 
 .daily-div > div {
-  display: flex;
+  display: grid;
+  grid-template-rows: 2fr 1fr;
+  width: 100%;
+  justify-content: center;
+  
+}
+
+.daily-div > div > div {
+  width: 100%;
 }
 
 .daily-div > div > :first-child {
   display: flex;
   align-items: center;
+  margin-left: -8%;
 }
 
 .daily-div > div > :nth-child(2) {
@@ -226,11 +289,19 @@ body {
   flex-direction: column;
 }
 
-
-.daily-div > div * img {
-  height: 20px;
-  width: 20px;
+.daily-div > div > div:first-child > img {
+  width: 40%;
 }
+
+.daily-div > div > div:nth-child(2) > img {
+  width: 30%;
+}
+
+.daily-div > div *  p {
+  font-size: 1.2em;
+}
+
+
 
 
 
