--- a/src/style.css
+++ b/src/style.css
@@ -74,6 +74,8 @@ body {
   padding: 0;
   z-index: 100;
   background-color: lightgray;
+  position: absolute;
+  top: 80%;
 }
 
 .search-results > li {
